# stock-analyzer

./: .env  README.md  app.py  bilan_page.py  pdf_utils.py  pyproject.toml  recup_fundamentaux.py  recup_graphique.py  recup_infos.py  recup_llm.py  recup_summary.py  recup_ticker.py  stock_utils.py  test.ipynb  todo.txt
app/: app.py
recup/: bilan_page.py  recup_fundamentaux.py  recup_graphique.py  recup_infos.py  recup_llm.py  recup_llm_analysis.py  recup_summary.py
utils/: stock_utils.py
